@@ -6,6 +6,7 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -15,43 +16,59 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class AuthenticationFilter extends OncePerRequestFilter {
+
     private final TokenValidator tokenValidator;
 
+    @Value("${app.admin.user-ids:}")
+    private String adminUserIds;
+
     @Override
-    protected void doFilterInternal(@Nonnull HttpServletRequest request, @Nonnull HttpServletResponse response, @Nonnull FilterChain filterChain)
-            throws ServletException, IOException {
+    protected void doFilterInternal(
+            @Nonnull HttpServletRequest request,
+            @Nonnull HttpServletResponse response,
+            @Nonnull FilterChain filterChain
+    ) throws ServletException, IOException {
 
         String token = extractToken(request);
 
         if (token != null && tokenValidator.validateToken(token)) {
             String userId = tokenValidator.extractUserId(token);
-//            List<String> roles = new ArrayList<>();
 
-            // extract user id, first name, last name, email from token
             String email = tokenValidator.extractEmail(token);
             String firstName = tokenValidator.extractFirstName(token);
             String lastName = tokenValidator.extractLastName(token);
 
-            UserPrincipal userPrincipal = new UserPrincipal(userId,email,firstName,lastName);
-            //UserPrincipal userPrincipal = UserPrincipal.builder().id(userId)...
+            UserPrincipal userPrincipal = new UserPrincipal(userId, email, firstName, lastName);
 
-
-            // Extract roles from the token
             List<String> roles = tokenValidator.extractRoles(token);
-            List<GrantedAuthority> authorities = roles != null ?
-                    roles.stream()
-                            .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                            .collect(Collectors.toList()) :
-                    new ArrayList<>();
+            if (roles == null) {
+                roles = new ArrayList<>();
+            }
+
+            // Fallback: assign ADMIN role based on Clerk user id
+            List<String> adminIds = Arrays.stream(adminUserIds.split(","))
+                    .map(String::trim)
+                    .filter(s -> !s.isEmpty())
+                    .toList();
+
+            if (userId != null && adminIds.contains(userId) && !roles.contains("ADMIN")) {
+                roles.add("ADMIN");
+            }
+
+            List<GrantedAuthority> authorities = roles.stream()
+                    .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
+                    .collect(Collectors.toList());
 
             UsernamePasswordAuthenticationToken authentication =
                     new UsernamePasswordAuthenticationToken(userPrincipal, null, authorities);
+
             SecurityContextHolder.getContext().setAuthentication(authentication);
         }
 
